# Opencv-Examples

./: README.md
CannyEdgeDetector/: CMakeLists.txt  main.cpp
Convolution/: CMakeLists.txt  main.cpp
DFT/: CMakeLists.txt  main.cpp
DrawingALine/: CMakeLists.txt  main.cpp
GaussianBlur/: CMakeLists.txt  main.cpp
HistogramCalculation/: CMakeLists.txt  main.cpp
HistogramEqualiz/: CMakeLists.txt  main.cpp
HoughLine/: CMakeLists.txt  main.cpp
LaplacianFilter/: CMakeLists.txt  main.cpp
LoadDisplaySaveImage/: CMakeLists.txt  main.cpp
Prewitt_withoutCvAPI/: CMakeLists.txt  main.cpp
SimpleThreshold/: CMakeLists.txt
Sobel/: CMakeLists.txt  main.cpp
